gke/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: gcr.io/${PROJECT_ID}/nthu-chatbot-client:latest
        imagePullPolicy: Always
        name: nthu-chatbot-client
        ports:
        - containerPort: 80
