gke/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
spec:
 backend:
   serviceName: nginx-service
   servicePort: 80
